src/snapshots/tptp__tfx__tests__tfx_unitary_term-3.snap
---
source: src/tfx.rs
expression: parsed
---
Defined(
    Number(
        Integer(
            Integer(
                "123",
            ),
        ),
    ),
)
