src/snapshots/tptp__tfx__tests__tfx_unitary_term-5.snap
---
source: src/tfx.rs
expression: parsed
---
Variable(
    Variable(
        UpperWord(
            "X",
        ),
    ),
)
