src/snapshots/tptp__tfx__tests__tfx_unitary_term-7.snap
---
source: src/tfx.rs
expression: parsed
---
Logic(
    Unitary(
        Atomic(
            Defined(
                DefinedAtomic(
                    Constant(
                        DefinedConstant(
                            DefinedFunctor(
                                AtomicDefinedWord(
                                    DollarWord(
                                        LowerWord(
                                            "true",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
