src/snapshots/tptp__tfx__tests__tfx_unitary_term.snap
---
source: src/tfx.rs
expression: parsed
---
Atomic(
    Plain(
        Constant(
            Constant(
                Functor(
                    Lower(
                        LowerWord(
                            "p",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
