src/snapshots/tptp__tfx__tests__tfx_unitary_type-3.snap
---
source: src/tfx.rs
expression: parsed
---
Product(
    XprodType(
        [
            Atomic(
                Variable(
                    Variable(
                        UpperWord(
                            "A",
                        ),
                    ),
                ),
            ),
            Atomic(
                Variable(
                    Variable(
                        UpperWord(
                            "B",
                        ),
                    ),
                ),
            ),
        ],
    ),
)
