src/snapshots/tptp__tfx__tests__tfx_unitary_type-5.snap
---
source: src/tfx.rs
expression: parsed
---
Product(
    XprodType(
        [
            Product(
                XprodType(
                    [
                        Atomic(
                            Variable(
                                Variable(
                                    UpperWord(
                                        "A",
                                    ),
                                ),
                            ),
                        ),
                        Atomic(
                            Constant(
                                TypeConstant(
                                    TypeFunctor(
                                        Lower(
                                            LowerWord(
                                                "c",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
            Product(
                XprodType(
                    [
                        Atomic(
                            Variable(
                                Variable(
                                    UpperWord(
                                        "B",
                                    ),
                                ),
                            ),
                        ),
                        Atomic(
                            Constant(
                                TypeConstant(
                                    TypeFunctor(
                                        Lower(
                                            LowerWord(
                                                "d",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ],
    ),
)
