src/snapshots/tptp__tfx__tests__tfx_unitary_type.snap
---
source: src/tfx.rs
expression: parsed
---
Atomic(
    Variable(
        Variable(
            UpperWord(
                "A",
            ),
        ),
    ),
)
