src/snapshots/tptp__tfx__tests__tfx_variable-3.snap
---
source: src/tfx.rs
expression: parsed
---
Typed(
    TypedVariable {
        variable: Variable(
            UpperWord(
                "X",
            ),
        ),
        typ: Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
    },
)
