src/snapshots/tptp__tfx__tests__tfx_variable.snap
---
source: src/tfx.rs
assertion_line: 1050
expression: parsed
---
Untyped(
    Variable(
        UpperWord(
            "X",
        ),
    ),
)
