src/snapshots/tptp__tfx__tests__tfx_variable_list.snap
---
source: src/tfx.rs
expression: parsed
---
VariableList(
    [
        Untyped(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
    ],
)
